# mandel-cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md  encoding_plan.txt
include/: Color.hpp  Mandelbrot.hpp  Mandelbrot_proto.hpp  Palette.hpp  types.hpp  util.hpp
src/: Color.cpp  Mandelbrot.cpp  Palette.cpp  main.cpp  main_proto.cpp  util.cpp
